Analyzer "working" - Encapsulated algebraic makros in parenthesis to avoid wrong results. - Replaced method for mapping FFT result to display width. - Same method now works with a global array to avoid a memory leak. - Added ways for debugging interim results. - Added a timer to print debug info every x seconds. - Moved DEBUG and AUDIO_MOCK flag to platformio.ini.
TODO:
- Find a way to remove interferences when sampling from audio signal.

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,12 @@
 platform = atmelavr
 board = uno
 framework = arduino
+
+; Build options
+build_flags = 
+    ;-D DEBUG=1
+    -D AUDIO_MOCK=1
+
+; Serial Monitor options
+monitor_speed = 115200
+;monitor_flags = --encoding hexlify
